fix(VDialog): prevent scrollable card from overflowing horizontally
fixes #6420

--- a/packages/vuetify/src/stylus/components/_dialogs.styl
+++ b/packages/vuetify/src/stylus/components/_dialogs.styl
@@ -73,6 +73,7 @@
     > .v-card
       display: flex
       flex: 1 1 100%
+      max-width: 100%
       flex-direction: column
 
       > .v-card__title
